samples/_failures_safe/1761318963_05adc8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56e65ef6.c: In function ‘print_shortest_path’:
./samples/SAFE/__tmp_56e65ef6.c:148:9: error: expected declaration or statement at end of input
  148 |         if (i > 0) printf(" -> ");
      |         ^~
./samples/SAFE/__tmp_56e65ef6.c:148:9: error: expected declaration or statement at end of input
